fix: Ensure bottom link is visible on mobile phones and on desktop on mouseover with placeholder div

--- a/blocks/shared-styles/scss/_header-nav.scss
+++ b/blocks/shared-styles/scss/_header-nav.scss
@@ -9,12 +9,32 @@ $overlay-z-index: 2;
 $section-bg: #292929;
 $section-width: 329px;
 $top-nav-stylistic-margin: 13px;
+$max-mobile-bottom-toolbar-height: 130px;
+$mouseover-link-preview-safe-area-height: 40px;
 
 body.nav-open {
   overflow-y: hidden;
 
   .main {
     z-index: -1;
+  }
+}
+
+.section-menu--bottom-placeholder {
+  // on desktop, on the left, the bottom link 
+  // is not visible on hover over other links
+  height: $mouseover-link-preview-safe-area-height;
+  background-color: $section-bg;
+}
+
+@media screen and (max-width: map-get($grid-breakpoints, 'md')) {
+  .section-menu--bottom-placeholder {
+    // ensure bottom item is visible on mobile
+    // height handles biggest notch on iphone 12 pro
+    height: $max-mobile-bottom-toolbar-height;
+    @supports (height: env(safe-area-inset-bottom)) {
+      height: calc(env(safe-area-inset-bottom) + $max-mobile-bottom-toolbar-height);
+    }
   }
 }
 
@@ -409,7 +429,7 @@ body.nav-open {
   }
 
   &.open {
-    // dimmed background
+    // dimmed background on desktop
     background: rgba(25, 25, 25, 0.5);
     // scroll and show vertical overflow when open
     overflow-y: scroll;
@@ -420,6 +440,8 @@ body.nav-open {
       .inner-drawer-nav {
         width: 100vw;
       }
+      // on mobile, show dark background everywhere
+      background: $section-bg;
     }
   }
 
